crates/frontend/tests/type_errors/cant_infer_type_param.nemo
struct S[a, b] {
    a : a,
    b : b,
}

fn polyF[a, b](x : a, y : b) -> a {
    x
}

fn main() {
  let s = S { a = 10, b = [] };
  polyF(10, []);
  {}
}
